--- a/index.html
+++ b/index.html
@@ -1,77 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
-
-  <title>johtso/CoffeeMarklet @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #7b8c65;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #ffffff;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #84739a; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #84739a; }
-    h3 { text-align: center; color: #84739a; }
-    a { color: #84739a; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+<meta charset=utf-8 />
+<title></title>
+<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+<script type="text/javascript" src="http://github.com/jashkenas/coffee-script/raw/master/extras/coffee-script.js"></script>
+<script type="text/coffeescript" src="CoffeeMarklet.coffee"></script>
+<script type="text/coffeescript" src="main.coffee"></script>
+<!--[if IE]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
-
 <body>
-  <a href="http://github.com/johtso/CoffeeMarklet"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/johtso/CoffeeMarklet/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/johtso/CoffeeMarklet/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+<div class="swc0">
+<div class="swc1">
+    <div id="wrapper">
+        <div id="input-area">
+            <label for="input">CoffeeScript:</label><br />
+            <textarea id="input" cols="80"># Your CoffeeScript goes here!</textarea><br />
+            <a id="gen-button" class="large blue button">Generate bookmarklet</a>
+            <div id="jq_options">
+                <label for="jq_check">Include jQuery:</textarea><input type="checkbox" id="jq_check" checked="checked" />
+                <div id="jq_ver_box">
+                <label for="jq_ver">Minimum version:</label><br />
+                <input type="text" id="jq_ver" value="1.6.1" />
+                </div>
+            </div>
+            <br />
+            
+        </div>
+        <div id="output-area">
+        <label for="output">Bookmarklet Code:</label><br />
+        <textarea id="output" cols="80"></textarea>
+        </div><br />
+        <a id="bookmarklet" class="green button">Your bookmarklet!</a>
     </div>
-
-    <h1><a href="http://github.com/johtso/CoffeeMarklet">CoffeeMarklet</a>
-      <span class="small">by <a href="http://github.com/johtso">johtso</a></span></h1>
-
-    <div class="description">
-      Easily generate a bookmarklet from CoffeeScript
-    </div>
-
-    <h2>Authors</h2>
-<p>Johannes Charman (johtso@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Johannes Charman (johtso@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/johtso/CoffeeMarklet/zipball/master">zip</a> or
-      <a href="http://github.com/johtso/CoffeeMarklet/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/johtso/CoffeeMarklet</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/johtso/CoffeeMarklet">johtso/CoffeeMarklet</a>
-    </div>
-
-  </div>
-
-  
+</div>
+</div>
 </body>
 </html>
