--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title></title>
+<title>CoffeeMarklet</title>
 <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://github.com/jashkenas/coffee-script/raw/master/extras/coffee-script.js"></script>
 <script type="text/coffeescript" src="CoffeeMarklet.coffee"></script>
@@ -15,6 +16,7 @@
 <body>
 <div class="swc0">
 <div class="swc1">
+    <h1 id="title">CoffeeMarklet</h1>
     <div id="wrapper">
         <div id="input-area">
             <label for="input">CoffeeScript:</label><br />
