--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-23814301-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body>
 <div class="swc0">
@@ -25,7 +38,7 @@
             <div id="jq_options">
                 <label for="jq_check">Include jQuery:</textarea><input type="checkbox" id="jq_check" checked="checked" />
                 <div id="jq_ver_box">
-                <label for="jq_ver">Minimum version:</label><br />
+                <label for="jq_ver">Minimum version:</label>
                 <input type="text" id="jq_ver" value="1.6.1" />
                 </div>
             </div>
