--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <textarea id="input" cols="80" spellcheck="false"># Your CoffeeScript goes here!&#10;&#10;alert &quot;CoffeeScript and jQuery #{$.fn.jquery}!&quot;</textarea><br />
             <a id="gen-button" class="large blue button">Generate bookmarklet</a>
             <div id="jq_options">
-                <label for="jq_check">Include jQuery:</textarea><input type="checkbox" id="jq_check" checked="checked" />
+                <label for="jq_check">Include jQuery:</label>
+                <input type="checkbox" id="jq_check" checked="checked" />
                 <div id="jq_ver_box">
                 <label for="jq_ver">Minimum version:</label>
                 <input type="text" id="jq_ver" value="1.6.1" />
