--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8 />
-<title>CoffeeMarklet</title>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+<title>CoffeeMarklet - CoffeeScript jQuery Bookmarklet Generator</title>
+<meta name="description" content="Use CoffeeMarklet to easily generate bookmarklets from CoffeeScript - optionally inserting jQuery into the page (safely!)" />
+<meta name="keywords" content="CoffeeMarklet, CoffeeScript, jQuery, javascript, bookmarklet, bookmarklet generator" />
 <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
