--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-23814301-1"]);_gaq.push(["_trackP
     <div id="wrapper">
         <div id="input-area">
             <label for="input">CoffeeScript:</label><br />
-            <textarea id="input" cols="80" spellcheck="false"># Your CoffeeScript goes here!&#10;&#10;alert &quot;CoffeeScript and jQuery #{$.fn.jquery}!&quot;</textarea><br />
+            <textarea id="input" cols="80" spellcheck="false"># Paste your CoffeeScript here...&#10;&#10;alert (&quot;Test #{i}&quot; for i in [0..3]).join(', ')</textarea><br />
             <a id="gen-button" class="large blue button">Generate bookmarklet</a>
             <div id="jq_options">
                 <label for="jq_check">Include jQuery:</label>
