Changed to different method of centering

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-23814301-1"]);_gaq.push(["_trackP
 </script>
 </head>
 <body>
-<div class="swc0">
-<div class="swc1">
+<div id="wrap">
+<div id="content">
+
     <h1 id="title">CoffeeMarklet</h1>
-    <div id="wrapper">
+
+    <div id="box">   
         <div id="input-area">
             <label for="input">CoffeeScript:</label><br />
             <textarea id="input" cols="80" spellcheck="false"># Paste your CoffeeScript here...&#10;&#10;alert (&quot;Test #{i}&quot; for i in [0..3]).join(', ')</textarea><br />
