--- a/index.html
+++ b/index.html
@@ -44,13 +44,18 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-23814301-1"]);_gaq.push(["_trackP
             <br />
         </div>
 
+        <div id="bookmarklet">
+            <a id="bm_button" class="green button">Your bookmarklet!</a>
+            <br />
+            <label for="src_check">Show Source:</label>
+            <input type="checkbox" id="src_check" />
+        </div>
+
         <div id="output-area">
-            <label for="output">Bookmarklet Code:</label>
+            <label for="output">Bookmarklet Source:</label>
             <br />
             <textarea id="output" cols="80" spellcheck="false"></textarea>
         </div><br />
-
-        <a id="bookmarklet" class="green button">Your bookmarklet!</a>
     </div>
 </div>
 </div>
