Stop the "show source" checkbox state being remembered

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-23814301-1"]);_gaq.push(["_trackP
         <div id="bookmarklet">
             <a id="bm_button" class="green button">Your bookmarklet!</a>
             <br />
-            <label for="src_check">Show Source:</label>
-            <input type="checkbox" id="src_check" />
+            <form id="src_show">
+                <label for="src_check">Show Source:</label>
+                <input type="checkbox" id="src_check" />
+            </form>
         </div>
 
         <div id="output-area">
